Fill Counter Strike page

--- a/games/apex.html
+++ b/games/apex.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <img src="../assets/img/apex-banner.jpg">
+        <img src="../assets/img/apex-banner.jpg" height="500px">
         <h1>Asaka's Apex Legends stash</h1>
         <h2>About the game: </h2>
         <p>Basically this is a fast paced shooter in a style of Battle Royal with really cool movement system, that's heavily skill-dependant and has a lot of room for self-improvement at it.</p>
