--- a/games/cs2.html
+++ b/games/cs2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Apex Legends achievements and highlights</title>
+        <title>Counter-Strike 2 achievements and highlights</title>
     </head>
 
     <body>
