--- a/games/apex.html
+++ b/games/apex.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <a href="../index.html">< Go Back</a>
         <img src="../assets/img/apex-banner.jpg" height="500px">
         <h1>Asaka's Apex Legends stash</h1>
         <h2>About the game: </h2>
