--- a/games/osu.html
+++ b/games/osu.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <a href="../index.html">< Go Back</a>
         <img src="../assets/img/osu-banner.png" height="500px">
         <h1>Asaka's osu! stash</h1>
         <h2>About the game: </h2>
