Fix go back button

--- a/games/osu.html
+++ b/games/osu.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <a href="../index.html">< Go Back</a>
+        <p><a href="../index.html">< Go Back</a></p>
         <img src="../assets/img/osu-banner.png" height="500px">
         <h1>Asaka's osu! stash</h1>
         <h2>About the game: </h2>
