--- a/games/apex.html
+++ b/games/apex.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <a href="../index.html">< Go Back</a>
+        <p><a href="../index.html">< Go Back</a></p>
         <img src="../assets/img/apex-banner.jpg" height="500px">
         <h1>Asaka's Apex Legends stash</h1>
         <h2>About the game: </h2>
