--- a/games/cs2.html
+++ b/games/cs2.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <a href="../index.html">< Go Back</a>
+        <p><a href="../index.html">< Go Back</a></p>
         <img src="../assets/img/cs2-banner.jpg" height="500px">
         <h1>Asaka's Counter-Strike 2 stash</h1>
         <h2>About the game: </h2>
