Add Basic style

--- a/index.html
+++ b/index.html
@@ -4,19 +4,38 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Asaka's Game Achievements</title>
+
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Hii! This is where you can find some of my highlights and achievements from my gamer-side! :3</h1>
-        <h2>A little about my playstyle</h2>
-        <p>I love playing not like the "most" people <em>I think</em>. 
-            I love finding bugs, various fun things and making highlights in games.</p>
-        <p>So, all of that is really impacts my gameplay and the amount of funny and pog moments that cames from it!</p>
+        <nav class="header">
+            <ul class="header-items">
+                <a href="./">Asaka's personal game achievements</a>
+                <div class="game-items">
+                    <li><a href="./games/osu.html">osu!</a></li>
+                    <li><a href="./games/apex.html">Apex Legends</a></li>
+                    <li><a href="./games/cs2.html">Counter-Strike 2</a></li>
+                </div>
+            </ul>
+        </nav>
+        
+        <div class="main-content">
+            <h1 class="title">
+                Hii! This is where you can find some of my highlights and achievements from my gamer-side! :3
+            </h1>
+            
+            <h2 class="topic">A little about my playstyle</h2>
+            <p>I love playing not like the "most" people <em>I think</em>. 
+                I love finding bugs, various fun things and making highlights in games.</p>
+            <p>So, all of that is really impacts my gameplay and the amount of funny and pog moments that cames from it!</p>
 
-        <h2>Let's go move to the main topic of the site: Highlights and Achievements from my Gaming journey</h2>
-        <p><em>You can click on the highlighted text to look at the specific games.</em></p>
-        <h3><a href="./games/osu.html">osu!</a></h3>
-        <h3><a href="./games/apex.html">Apex Legends</a></h3>
-        <h3><a href="./games/cs2.html">Counter-Strike 2</a></h3>
+            <h2 class="topic">Let's go move to the main topic of the site: Highlights and Achievements from my Gaming journey</h2>
+            <p><em>You can click on the highlighted text to look at the specific games.</em></p>
+        </div>
+
+        <div class="footer">
+            [ 2025 ] - made with a little bit of love and a lot of stupidity by Asaka
+        </div>
     </body>
 </html>
