Update basic style

--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
             <p>So, all of that is really impacts my gameplay and the amount of funny and pog moments that cames from it!</p>
 
             <h2 class="topic">Let's go move to the main topic of the site: Highlights and Achievements from my Gaming journey</h2>
-            <p><em>You can click on the highlighted text to look at the specific games.</em></p>
+            <p><em>Click on the specific games below if you want to look more</em></p>
+       
+            <div class="game-card-collection">
+                <div class="game-card-osu">osu!</div>
+                <div class="game-card-apex">Apex Legends</div>
+                <div class="game-card-cs">Counter-Strike 2</div>
+            </div>
+
         </div>
 
         <div class="footer">
